syntax = "proto3";

package minergrpc;

option go_package = "code/go/0chain.net/gen/proto/minerproto/api/v1;minergrpc";

import "minerproto/api/v1/miner_contract.proto";
import "google/api/annotations.proto";

service MinerService {
  rpc GetNotarizedBlock(GetNotarizedBlockRequest)
      returns (GetNotarizedBlockResponse) {
    option (google.api.http) = {
      get : "/v2/_x2m/block/notarized_block/get"
    };
  }
}